Waiter modal overlapping issue

--- a/src/waiterPopUpStyle.css
+++ b/src/waiterPopUpStyle.css
@@ -13,7 +13,7 @@
     width: 700px;
     height: 400px;
     text-align: center;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .modalText {
